Add home screen widget feature and icon updates

--- a/android/app/src/main/res/layout/app_home_widget.xml
+++ b/android/app/src/main/res/layout/app_home_widget.xml
@@ -2,7 +2,8 @@
     style="@style/Widget.Android.AppWidget.Container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@style/Theme.Android.AppWidgetContainer">
+    android:theme="@style/Theme.Android.AppWidgetContainer"
+    android:background="#ffd133">
 
     <TextView
         android:id="@+id/appwidget_text"
@@ -15,5 +16,6 @@
         android:contentDescription="@string/appwidget_text"
         android:text="@string/appwidget_text"
         android:textSize="24sp"
-        android:textStyle="bold|italic" />
+        android:textStyle="bold|italic" 
+        android:textColor="#FFFFFF"/>
 </RelativeLayout>
