--- a/android/app/src/main/res/xml/app_home_widget_info.xml
+++ b/android/app/src/main/res/xml/app_home_widget_info.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:description="@string/app_widget_description"
-    android:initialKeyguardLayout="@layout/app_home_widget"
-    android:initialLayout="@layout/app_home_widget"
-    android:minWidth="40dp"
-    android:minHeight="40dp"
+    android:initialKeyguardLayout="@layout/widget_layout"
+    android:initialLayout="@layout/widget_layout"
+    android:minWidth="250dp"
+    android:minHeight="110dp"
     android:previewImage="@drawable/example_appwidget_preview"
-    android:previewLayout="@layout/app_home_widget"
+    android:previewLayout="@layout/widget_layout"
     android:resizeMode="horizontal|vertical"
     android:targetCellWidth="1"
     android:targetCellHeight="1"
-    android:updatePeriodMillis="86400000"
+    android:updatePeriodMillis="1800000"
     android:widgetCategory="home_screen" />
